--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,13 +38,14 @@
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.7",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.7.0",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "tw-animate-css": "^1.3.6",
-    "typescript": "^5.6.3",
+    "typescript": "^5.9.2",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.1.3"
   }
